--- a/SpaceTrader/app/src/main/AndroidManifest.xml
+++ b/SpaceTrader/app/src/main/AndroidManifest.xml
@@ -9,24 +9,19 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".views.MainActivity">
+        <activity android:name="edu.gatech.cs2340.SpaceTrader.views.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-<<<<<<< HEAD
-        <activity android:name=".views.CreatePlayer" android:parentActivityName=".views.MainActivity">
+        <activity android:name="edu.gatech.cs2340.SpaceTrader.views.CreatePlayer" android:parentActivityName=".views.MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".views.MainActivity" />
         </activity>
-=======
-        <activity
-            android:name=".views.CreatePlayer"
-            android:parentActivityName=".views.MainActivity" />
->>>>>>> refs/remotes/origin/master
+
     </application>
 
 </manifest>
