adds error checking + confirm screen
- now displays a toast saying 'invalid character creation' when invalid point combination is entered, and does NOT create player
- correct add goes to profile screen, which displays: name, difficulty, credits, ship name, and 4 skill point values. 
- added credits (just an int) to player class
- added ship (placeholder, just a string rn) to player class
- getPlayer method added to viewmodel/interactor/etc. which allows outside classes to access player values from allPlayers arraylist.

--- a/SpaceTrader/app/src/main/AndroidManifest.xml
+++ b/SpaceTrader/app/src/main/AndroidManifest.xml
@@ -21,7 +21,11 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".views.MainActivity" />
         </activity>
-
+        <activity android:name="edu.gatech.cs2340.SpaceTrader.views.PlayerConfirmation" android:parentActivityName=".views.MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".views.CreatePlayer" />
+        </activity>
     </application>
 
 </manifest>
