--- a/SpaceTrader/app/src/main/AndroidManifest.xml
+++ b/SpaceTrader/app/src/main/AndroidManifest.xml
@@ -26,10 +26,10 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".views.PlayerConfirmation" />
         </activity>
-        <activity android:name="edu.gatech.cs2340.SpaceTrader.views.Planet" android:parentActivityName=".views.PlayerConfirmation">
+        <activity android:name="edu.gatech.cs2340.SpaceTrader.views.PlanetScreen" android:parentActivityName=".views.PlayerConfirmation">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".views.Planet" />
+                android:value=".views.PlanetScreen" />
         </activity>
     </application>
 
