--- a/SpaceTrader/app/src/main/AndroidManifest.xml
+++ b/SpaceTrader/app/src/main/AndroidManifest.xml
@@ -31,6 +31,11 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".views.PlanetScreen" />
         </activity>
+        <activity android:name="edu.gatech.cs2340.SpaceTrader.views.InMarket" android:parentActivityName=".views.PlanetScreen">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".views.InMarket" />
+        </activity>
     </application>
 
 </manifest>
