--- a/SpaceTrader/gradle/wrapper/gradle-wrapper.properties
+++ b/SpaceTrader/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Sun Mar 24 15:34:18 EDT 2019
+#Sat Feb 16 20:21:59 EST 2019
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
