adds random events
steps to making a new random event:
1. add keyword to enum
2. implement it as a new switch case in RandomEvent.java. it must return a string.

--- a/SpaceTrader/app/src/main/AndroidManifest.xml
+++ b/SpaceTrader/app/src/main/AndroidManifest.xml
@@ -46,6 +46,11 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".views.InMarket" />
         </activity>
+        <activity android:name="edu.gatech.cs2340.SpaceTrader.views.RandomEventView" android:parentActivityName=".views.SolarSystemMap">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".views.InMarket" />
+        </activity>
     </application>
 
 </manifest>
