Testing gitignore fix

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 
 SpaceTrader/.idea/caches/gradle_models.ser
 SpaceTrader/.idea/workspace.xml
+SpaceTrader/.idea/gradle.xml
+SpaceTrader/.idea/misc.xml
