--- a/SpaceTrader/app/src/main/AndroidManifest.xml
+++ b/SpaceTrader/app/src/main/AndroidManifest.xml
@@ -16,37 +16,44 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="edu.gatech.cs2340.SpaceTrader.views.CreatePlayer" android:parentActivityName=".views.MainActivity">
+        <activity android:name="edu.gatech.cs2340.SpaceTrader.views.CreatePlayer"
+            android:parentActivityName=".views.MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".views.MainActivity" />
         </activity>
-        <activity android:name="edu.gatech.cs2340.SpaceTrader.views.PlayerConfirmation" android:parentActivityName=".views.CreatePlayer">
+        <activity android:name="edu.gatech.cs2340.SpaceTrader.views.PlayerConfirmation"
+            android:parentActivityName=".views.CreatePlayer">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".views.PlayerConfirmation" />
         </activity>
-        <activity android:name="edu.gatech.cs2340.SpaceTrader.views.InMarket" android:parentActivityName=".views.PlanetScreen">
+        <activity android:name="edu.gatech.cs2340.SpaceTrader.views.InMarket"
+            android:parentActivityName=".views.PlanetScreen">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".views.InMarket" />
         </activity>
-        <activity android:name="edu.gatech.cs2340.SpaceTrader.views.UniverseMap" android:parentActivityName=".views.PlayerConfirmation">
+        <activity android:name="edu.gatech.cs2340.SpaceTrader.views.UniverseMap"
+            android:parentActivityName=".views.PlayerConfirmation">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".views.InMarket" />
         </activity>
-        <activity android:name="edu.gatech.cs2340.SpaceTrader.views.SolarSystemMap" android:parentActivityName=".views.UniverseMap">
+        <activity android:name="edu.gatech.cs2340.SpaceTrader.views.SolarSystemMap"
+            android:parentActivityName=".views.UniverseMap">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".views.InMarket" />
         </activity>
-        <activity android:name="edu.gatech.cs2340.SpaceTrader.views.PlanetScreen" android:parentActivityName=".views.SolarSystemMap">
+        <activity android:name="edu.gatech.cs2340.SpaceTrader.views.PlanetScreen"
+            android:parentActivityName=".views.SolarSystemMap">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".views.InMarket" />
         </activity>
-        <activity android:name="edu.gatech.cs2340.SpaceTrader.views.RandomEventView" android:parentActivityName=".views.SolarSystemMap">
+        <activity android:name="edu.gatech.cs2340.SpaceTrader.views.RandomEventView"
+            android:parentActivityName=".views.SolarSystemMap">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".views.InMarket" />
