--- a/SpaceTrader/local.properties
+++ b/SpaceTrader/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Apr 07 14:36:44 GMT-04:00 2019
-sdk.dir=C\:\\Users\\Owen\\AppData\\Local\\Android\\Sdk
+#Mon Apr 08 13:02:42 EDT 2019
+sdk.dir=C\:\\Users\\Savyasachi\\AppData\\Local\\Android\\Sdk
