--- a/SpaceTrader/local.properties
+++ b/SpaceTrader/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Apr 10 00:59:31 EDT 2019
-sdk.dir=C\:\\Users\\paula\\AppData\\Local\\Android\\Sdk
+#Wed Apr 10 19:06:03 GMT-04:00 2019
+sdk.dir=C\:\\Users\\Owen\\AppData\\Local\\Android\\Sdk
