fixed javadoc, encapsulation, class structure and usablity warnings

--- a/SpaceTrader/local.properties
+++ b/SpaceTrader/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Apr 10 19:11:26 EDT 2019
-sdk.dir=/Users/jennakohls/Library/Android/sdk
+#Sat Apr 13 15:19:10 EDT 2019
+sdk.dir=C\:\\Users\\Savyasachi\\AppData\\Local\\Android\\Sdk
