--- a/SpaceTrader/app/src/main/AndroidManifest.xml
+++ b/SpaceTrader/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="edu.gatech.cs2340.SpaceTrader">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="edu.gatech.cs2340.SpaceTrader"
+    tools:ignore="GoogleAppIndexingWarning">
 
     <application
         android:allowBackup="true"
