--- a/SpaceTrader/local.properties
+++ b/SpaceTrader/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Wed Apr 10 19:06:03 GMT-04:00 2019
-sdk.dir=C\:\\Users\\Owen\\AppData\\Local\\Android\\Sdk
+sdk.dir=C\:\\Users\\paula\\AppData\\Local\\Android\\Sdk
