--- a/SpaceTrader/app/build.gradle
+++ b/SpaceTrader/app/build.gradle
@@ -36,4 +36,5 @@ dependencies {
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.jjoe64:graphview:4.2.2'
     implementation 'com.android.support:support-v4:28.0.0@aar'
+    testImplementation 'junit:junit:4.12'
 }
