--- a/SpaceTrader/app/src/main/AndroidManifest.xml
+++ b/SpaceTrader/app/src/main/AndroidManifest.xml
@@ -61,6 +61,13 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".views.InMarket" />
         </activity>
+        <activity android:name="edu.gatech.cs2340.SpaceTrader.views.ThreeChoiceMinigame"
+            android:parentActivityName=".views.SolarSystemMap">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".views.InMarket" />
+        </activity>
+
     </application>
 
 </manifest>
