--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ SpaceTrader/.idea/caches/gradle_models.ser
 SpaceTrader/.idea/workspace.xml
 SpaceTrader/.idea/gradle.xml
 SpaceTrader/.idea/misc.xml
+SpaceTrader/.idea/codeStyles/Project.xml
