--- a/SpaceTrader/local.properties
+++ b/SpaceTrader/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Apr 15 14:02:50 GMT-04:00 2019
-sdk.dir=C\:\\Users\\Owen\\AppData\\Local\\Android\\Sdk
+#Fri Apr 26 10:14:41 EDT 2019
+sdk.dir=/Users/jennakohls/Library/Android/sdk
