--- a/SpaceTrader/local.properties
+++ b/SpaceTrader/local.properties
@@ -5,5 +5,5 @@
 # For customization when using a Version Control System, please read the
 # header note.
 
-sdk.dir=C\:\\Users\\paula\\AppData\\Local\\Android\\Sdk
+sdk.dir=/Users/jennakohls/Library/Android/sdk
 
